Typeset ARC ROPE publications with Scholar citations (after syncing pub keys)

--- a/pubs.html
+++ b/pubs.html
@@ -352,8 +352,8 @@ $(document).ready(function () {
 <h3>2017</h3>
 
 <div class="bibox" style="display: none;">
-<pre><code id="bibtex-marchant2017search">
-@article{marchant2017search,
+<pre><code id="bibtex-marchant2017in">
+@article{marchant2017in,
   title = {In Search of an Entity Resolution {OASIS}: Optimal Asymptotic Sequential Importance Sampling},
   author = {Neil G. Marchant and Benjamin I. P. Rubinstein},
   journal = {Proceedings of the VLDB Endowment},
@@ -367,12 +367,12 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Marchant, Neil G. and Benjamin I. P. Rubinstein. “In Search of an Entity Resolution OASIS: Optimal Asymptotic Sequential Importance Sampling”. In: <em>Proceedings of the VLDB Endowment</em> 10.11 (Feb. 2017), pp. 1322-1333. [<a href="http://www.vldb.org/pvldb/vol10/p1322-rubinstein.pdf">PDF</a>; <a href="https://arxiv.org/abs/1703.00617">full</a>; <a href="http://git.io/OASIS">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2017search.bib', 'bibtex-marchant2017search')">BibTeX</a>]</li>
+<li>Marchant, Neil G. and Benjamin I. P. Rubinstein. “In Search of an Entity Resolution OASIS: Optimal Asymptotic Sequential Importance Sampling”. In: <em>Proceedings of the VLDB Endowment</em> 10.11 (Feb. 2017), pp. 1322-1333. [<a href="http://www.vldb.org/pvldb/vol10/p1322-rubinstein.pdf">PDF</a>; <a href="https://arxiv.org/abs/1703.00617">full</a>; <a href="http://git.io/OASIS">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2017in.bib', 'bibtex-marchant2017in')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
-<pre><code id="bibtex-rubinstein2017pain">
-@inproceedings{rubinstein2017pain,
+<pre><code id="bibtex-rubinstein2017painfree">
+@inproceedings{rubinstein2017painfree,
   title = {Pain-Free Random Differential Privacy with Sensitivity Sampling},
   author = {Benjamin I. P. Rubinstein and Francesco Alda},
   booktitle = {Proceedings of the 34th International Conference on Machine Learning},
@@ -385,7 +385,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Rubinstein, Benjamin I. P. and Francesco Alda. “Pain-Free Random Differential Privacy with Sensitivity Sampling”. In: <em>Proceedings of the 34th International Conference on Machine Learning</em>. ICML. PMLR. May. 2017, pp. 2950-2959. [<a href="http://proceedings.mlr.press/v70/rubinstein17a.html">PDF</a>; <a href="https://arxiv.org/abs/1706.02562">full</a>; <a href="https://brubinstein.github.io/diffpriv">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2017pain.bib', 'bibtex-rubinstein2017pain')">BibTeX</a>]</li>
+<li>Rubinstein, Benjamin I. P. and Francesco Alda. “Pain-Free Random Differential Privacy with Sensitivity Sampling”. In: <em>Proceedings of the 34th International Conference on Machine Learning</em>. ICML. PMLR. May. 2017, pp. 2950-2959. [<a href="http://proceedings.mlr.press/v70/rubinstein17a.html">PDF</a>; <a href="https://arxiv.org/abs/1706.02562">full</a>; <a href="https://brubinstein.github.io/diffpriv">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2017painfree.bib', 'bibtex-rubinstein2017painfree')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -456,8 +456,8 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
-<pre><code id="bibtex-fish2017sublinear">
-@misc{fish2017sublinear,
+<pre><code id="bibtex-fish2017sublineartime">
+@misc{fish2017sublineartime,
   title = {Sublinear-Time Adaptive Data Analysis},
   author = {Benjamin Fish and Lev Reyzin and Benjamin I. P. Rubinstein},
   eprint = {1709.09778},
@@ -469,7 +469,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Fish, Benjamin, Lev Reyzin and Benjamin I. P. Rubinstein. <em>Sublinear-Time Adaptive Data Analysis</em>. Sep. 2017. arXiv: 1709.09778 [cs.LG]. [<a href="https://arxiv.org/abs/1709.09778">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('fish2017sublinear.bib', 'bibtex-fish2017sublinear')">BibTeX</a>]</li>
+<li>Fish, Benjamin, Lev Reyzin and Benjamin I. P. Rubinstein. <em>Sublinear-Time Adaptive Data Analysis</em>. Sep. 2017. arXiv: 1709.09778 [cs.LG]. [<a href="https://arxiv.org/abs/1709.09778">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('fish2017sublineartime.bib', 'bibtex-fish2017sublineartime')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -559,8 +559,8 @@ $(document).ready(function () {
 <h3>2016</h3>
 
 <div class="bibox" style="display: none;">
-<pre><code id="bibtex-zhang2016differential">
-@inproceedings{zhang2016differential,
+<pre><code id="bibtex-zhang2016on">
+@inproceedings{zhang2016on,
   title = {On the differential privacy of {B}ayesian inference},
   author = {Zuhe Zhang and Benjamin I. P. Rubinstein and Christos Dimitrakakis},
   booktitle = {Proceedings of the 30th AAAI Conference on Artificial Intelligence},
@@ -572,7 +572,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Zhang, Zuhe, Benjamin I. P. Rubinstein and Christos Dimitrakakis. “On the differential privacy of Bayesian inference”. In: <em>Proceedings of the 30th AAAI Conference on Artificial Intelligence</em>. AAAI. Feb. 2016, pp. 2365-2371. [<a href="http://www.aaai.org/ocs/index.php/AAAI/AAAI16/paper/viewFile/12129/11885">PDF</a>; <a href="http://arxiv.org/abs/1512.06992">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('zhang2016differential.bib', 'bibtex-zhang2016differential')">BibTeX</a>]</li>
+<li>Zhang, Zuhe, Benjamin I. P. Rubinstein and Christos Dimitrakakis. “On the differential privacy of Bayesian inference”. In: <em>Proceedings of the 30th AAAI Conference on Artificial Intelligence</em>. AAAI. Feb. 2016, pp. 2365-2371. [<a href="http://www.aaai.org/ocs/index.php/AAAI/AAAI16/paper/viewFile/12129/11885">PDF</a>; <a href="http://arxiv.org/abs/1512.06992">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('zhang2016on.bib', 'bibtex-zhang2016on')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -611,8 +611,8 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
-<pre><code id="bibtex-alpcan2016large">
-@inproceedings{alpcan2016large,
+<pre><code id="bibtex-alpcan2016largescale">
+@inproceedings{alpcan2016largescale,
   title = {Large-scale strategic games and adversarial machine learning},
   author = {Tansu Alpcan and Benjamin I. P. Rubinstein and Christopher Leckie},
   booktitle = {2016 IEEE 55th Conference on Decision and Control},
@@ -625,12 +625,12 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Alpcan, Tansu, Benjamin I. P. Rubinstein and Christopher Leckie. “Large-scale strategic games and adversarial machine learning”. In: <em>2016 IEEE 55th Conference on Decision and Control</em>. CDC. IEEE. Dec. 2016, pp. 4420-4426. [<a href="http://ieeexplore.ieee.org/abstract/document/7798940/">PDF</a>; <a href="http://arxiv.org/abs/1609.06438">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('alpcan2016large.bib', 'bibtex-alpcan2016large')">BibTeX</a>]</li>
+<li>Alpcan, Tansu, Benjamin I. P. Rubinstein and Christopher Leckie. “Large-scale strategic games and adversarial machine learning”. In: <em>2016 IEEE 55th Conference on Decision and Control</em>. CDC. IEEE. Dec. 2016, pp. 4420-4426. [<a href="http://ieeexplore.ieee.org/abstract/document/7798940/">PDF</a>; <a href="http://arxiv.org/abs/1609.06438">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('alpcan2016largescale.bib', 'bibtex-alpcan2016largescale')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
-<pre><code id="bibtex-han2016game">
-@article{han2016game,
+<pre><code id="bibtex-han2016a">
+@article{han2016a,
   title = {A game theoretical approach to defend against co-resident attacks in cloud computing: Preventing co-residence using semi-supervised learning},
   author = {Yi Han and Tansu Alpcan and Jeffrey Chan and Christopher Leckie and Benjamin I. P. Rubinstein},
   journal = {IEEE Transactions on information Forensics and Security},
@@ -644,7 +644,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Han, Yi, Tansu Alpcan, Jeffrey Chan, Christopher Leckie and Benjamin I. P. Rubinstein. “A game theoretical approach to defend against co-resident attacks in cloud computing: Preventing co-residence using semi-supervised learning”. In: <em>IEEE Transactions on information Forensics and Security</em> 11.3 (Mar. 2016), pp. 556-570. [<a href="http://dx.doi.org/10.1109/TIFS.2015.2505680">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('han2016game.bib', 'bibtex-han2016game')">BibTeX</a>]</li>
+<li>Han, Yi, Tansu Alpcan, Jeffrey Chan, Christopher Leckie and Benjamin I. P. Rubinstein. “A game theoretical approach to defend against co-resident attacks in cloud computing: Preventing co-residence using semi-supervised learning”. In: <em>IEEE Transactions on information Forensics and Security</em> 11.3 (Mar. 2016), pp. 556-570. [<a href="http://dx.doi.org/10.1109/TIFS.2015.2505680">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('han2016a.bib', 'bibtex-han2016a')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -737,8 +737,8 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
-<pre><code id="bibtex-lim2015sub">
-@inproceedings{lim2015sub,
+<pre><code id="bibtex-lim2015submerge">
+@inproceedings{lim2015submerge,
   title = {Sub-Merge: Diving Down to the Attribute-Value Level in Statistical Schema Matching.},
   author = {Zhe Lim and Benjamin I. P. Rubinstein},
   booktitle = {Proceedings of the 29th AAAI Conference on Artificial Intelligence},
@@ -750,7 +750,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Lim, Zhe and Benjamin I. P. Rubinstein. “Sub-Merge: Diving Down to the Attribute-Value Level in Statistical Schema Matching.” In: <em>Proceedings of the 29th AAAI Conference on Artificial Intelligence</em>. AAAI. Jan. 2015, pp. 1791-1797. [<a href="http://www.aaai.org/Papers/AAAI/2015/13Lim.pdf">PDF</a>; <a href="http://people.eng.unimelb.edu.au/brubinstein/data">dataset</a>; <a style="cursor: pointer;" onclick="DownloadToFile('lim2015sub.bib', 'bibtex-lim2015sub')">BibTeX</a>]</li>
+<li>Lim, Zhe and Benjamin I. P. Rubinstein. “Sub-Merge: Diving Down to the Attribute-Value Level in Statistical Schema Matching.” In: <em>Proceedings of the 29th AAAI Conference on Artificial Intelligence</em>. AAAI. Jan. 2015, pp. 1791-1797. [<a href="http://www.aaai.org/Papers/AAAI/2015/13Lim.pdf">PDF</a>; <a href="http://people.eng.unimelb.edu.au/brubinstein/data">dataset</a>; <a style="cursor: pointer;" onclick="DownloadToFile('lim2015submerge.bib', 'bibtex-lim2015submerge')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -868,8 +868,8 @@ $(document).ready(function () {
 <h3>2012</h3>
 
 <div class="bibox" style="display: none;">
-<pre><code id="bibtex-zhao2012bayesian">
-@article{zhao2012bayesian,
+<pre><code id="bibtex-zhao2012a">
+@article{zhao2012a,
   title = {A {B}ayesian approach to discovering truth from conflicting sources for data integration},
   author = {Bo Zhao and Benjamin I. P. Rubinstein and Jim Gemmell and Jiawei Han},
   journal = {Proceedings of the VLDB Endowment},
@@ -883,7 +883,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Zhao, Bo, Benjamin I. P. Rubinstein, Jim Gemmell and Jiawei Han. “A Bayesian approach to discovering truth from conflicting sources for data integration”. In: <em>Proceedings of the VLDB Endowment</em> 5.6 (Feb. 2012), pp. 550-561. [<a href="http://vldb.org/pvldb/vol5/p550_bozhao_vldb2012.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('zhao2012bayesian.bib', 'bibtex-zhao2012bayesian')">BibTeX</a>]</li>
+<li>Zhao, Bo, Benjamin I. P. Rubinstein, Jim Gemmell and Jiawei Han. “A Bayesian approach to discovering truth from conflicting sources for data integration”. In: <em>Proceedings of the VLDB Endowment</em> 5.6 (Feb. 2012), pp. 550-561. [<a href="http://vldb.org/pvldb/vol5/p550_bozhao_vldb2012.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('zhao2012a.bib', 'bibtex-zhao2012a')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -924,8 +924,8 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
-<pre><code id="bibtex-rubinstein2012geometric">
-@article{rubinstein2012geometric,
+<pre><code id="bibtex-rubinstein2012a">
+@article{rubinstein2012a,
   title = {A geometric approach to sample compression},
   author = {Benjamin I. P. Rubinstein and J. Hyam Rubinstein},
   journal = {Journal of Machine Learning Research},
@@ -938,7 +938,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Rubinstein, Benjamin I. P. and J. Hyam Rubinstein. “A geometric approach to sample compression”. In: <em>Journal of Machine Learning Research</em> 13.Apr (2012), pp. 1221-1261. [<a href="http://jmlr.csail.mit.edu/papers/v13/rubinstein12a.html">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2012geometric.bib', 'bibtex-rubinstein2012geometric')">BibTeX</a>]</li>
+<li>Rubinstein, Benjamin I. P. and J. Hyam Rubinstein. “A geometric approach to sample compression”. In: <em>Journal of Machine Learning Research</em> 13.Apr (2012), pp. 1221-1261. [<a href="http://jmlr.csail.mit.edu/papers/v13/rubinstein12a.html">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2012a.bib', 'bibtex-rubinstein2012a')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -961,8 +961,8 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
-<pre><code id="bibtex-barth2012learning">
-@article{barth2012learning,
+<pre><code id="bibtex-barth2012a">
+@article{barth2012a,
   title = {A learning-based approach to reactive security},
   author = {Adam Barth and Benjamin I. P. Rubinstein and Mukund Sundararajan and John C Mitchell and Dawn Song and Peter L. Bartlett},
   journal = {IEEE Transactions on Dependable and Secure Computing},
@@ -976,7 +976,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Barth, Adam, Benjamin I. P. Rubinstein, Mukund Sundararajan, John C Mitchell, Dawn Song and Peter L. Bartlett. “A learning-based approach to reactive security”. In: <em>IEEE Transactions on Dependable and Secure Computing</em> 9.4 (Jul. 2012), pp. 482-493. [<a href="http://doi.ieeecomputersociety.org/10.1109/TDSC.2011.42">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('barth2012learning.bib', 'bibtex-barth2012learning')">BibTeX</a>]</li>
+<li>Barth, Adam, Benjamin I. P. Rubinstein, Mukund Sundararajan, John C Mitchell, Dawn Song and Peter L. Bartlett. “A learning-based approach to reactive security”. In: <em>IEEE Transactions on Dependable and Secure Computing</em> 9.4 (Jul. 2012), pp. 482-493. [<a href="http://doi.ieeecomputersociety.org/10.1109/TDSC.2011.42">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('barth2012a.bib', 'bibtex-barth2012a')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -1109,8 +1109,8 @@ $(document).ready(function () {
 <h3>2010</h3>
 
 <div class="bibox" style="display: none;">
-<pre><code id="bibtex-nelson2010near">
-@inproceedings{nelson2010near,
+<pre><code id="bibtex-nelson2010nearoptimal">
+@inproceedings{nelson2010nearoptimal,
   title = {Near-Optimal Evasion of Convex-Inducing Classifiers.},
   author = {Blaine Nelson and Benjamin I. P. Rubinstein and Ling Huang and Anthony D. Joseph and Shing-hon Lau and Steven J. Lee and Satish Rao and Anthony Tran and J. Doug Tygar},
   booktitle = {Proceedings of the Thirteenth International Conference on Artificial Intelligence and Statistics},
@@ -1121,12 +1121,12 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Nelson, Blaine, Benjamin I. P. Rubinstein, Ling Huang, Anthony D. Joseph, Shing-hon Lau, Steven J. Lee, Satish Rao, Anthony Tran and J. Doug Tygar. “Near-Optimal Evasion of Convex-Inducing Classifiers.” In: <em>Proceedings of the Thirteenth International Conference on Artificial Intelligence and Statistics</em>. AISTATS. 2010, pp. 549-556. [<a href="http://jmlr.csail.mit.edu/proceedings/papers/v9/nelson10a/nelson10a.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('nelson2010near.bib', 'bibtex-nelson2010near')">BibTeX</a>]</li>
+<li>Nelson, Blaine, Benjamin I. P. Rubinstein, Ling Huang, Anthony D. Joseph, Shing-hon Lau, Steven J. Lee, Satish Rao, Anthony Tran and J. Doug Tygar. “Near-Optimal Evasion of Convex-Inducing Classifiers.” In: <em>Proceedings of the Thirteenth International Conference on Artificial Intelligence and Statistics</em>. AISTATS. 2010, pp. 549-556. [<a href="http://jmlr.csail.mit.edu/proceedings/papers/v9/nelson10a/nelson10a.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('nelson2010nearoptimal.bib', 'bibtex-nelson2010nearoptimal')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
-<pre><code id="bibtex-barth2010learning">
-@inproceedings{barth2010learning,
+<pre><code id="bibtex-barth2010a">
+@inproceedings{barth2010a,
   title = {A learning-based approach to reactive security},
   author = {Adam Barth and Benjamin I. P. Rubinstein and Mukund Sundararajan and John C. Mitchell and Dawn Song and Peter L. Bartlett},
   booktitle = {Proceedings of the Fourteenth International Conference on Financial Cryptography and Data Security},
@@ -1137,7 +1137,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Barth, Adam, Benjamin I. P. Rubinstein, Mukund Sundararajan, John C. Mitchell, Dawn Song and Peter L. Bartlett. “A learning-based approach to reactive security”. In: <em>Proceedings of the Fourteenth International Conference on Financial Cryptography and Data Security</em>. FC. 2010, pp. 192-206. [<a href="https://people.eng.unimelb.edu.au/brubinstein/papers/react-short.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('barth2010learning.bib', 'bibtex-barth2010learning')">BibTeX</a>]</li>
+<li>Barth, Adam, Benjamin I. P. Rubinstein, Mukund Sundararajan, John C. Mitchell, Dawn Song and Peter L. Bartlett. “A learning-based approach to reactive security”. In: <em>Proceedings of the Fourteenth International Conference on Financial Cryptography and Data Security</em>. FC. 2010, pp. 192-206. [<a href="https://people.eng.unimelb.edu.au/brubinstein/papers/react-short.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('barth2010a.bib', 'bibtex-barth2010a')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
