--- a/group.html
+++ b/group.html
@@ -238,41 +238,47 @@ $(document).ready(function () {
 <div id="postdocs" class="section level3">
 <h3>Postdocs</h3>
 <ul>
-<li><a href="https://scholar.google.com/citations?user=TpErHPkAAAAJ&amp;hl=en">Shen Wang</a> (2016– ). Probabilistic programming, databases, record linkage.</li>
-<li><a href="https://scholar.google.com/citations?user=e_mtK4kAAAAJ&amp;hl=en">Yi Han</a> (2016– ). Adversarial machine learning.</li>
+<li><a href="http://shuo-zhou.info/">Shuo Zhou</a> (w Tordesillas, Bailey, Bondell 2018– ). Complex networks in materials science, cybersecurity.</li>
+<li><a href="https://tlienart.github.io/">Thibaut Lienart</a> (2018– ). Adversarial machine learning.</li>
+<li><a href="https://scholar.google.com/citations?user=e_mtK4kAAAAJ&amp;hl=en">Yi Han</a> (2016– ). Adversarial reinforcement learning, software-defined networks.</li>
 </ul>
 </div>
 <div id="phd-students" class="section level3">
 <h3>PhD students</h3>
 <ul>
+<li><a href="https://ndthan.bitbucket.io/">Duc Than Nguyen</a> (w Toby Murray 2018– ). Probabilistic information flow security.</li>
+<li><a href="http://www.malinga.me/">Malinga Perera</a> (w Renata Borovica-Gajic 2018– ). Self-driving databases.</li>
 <li><a href="https://www.linkedin.com/in/bastian-oetomo-34300856/">Bastian Oetomo</a> (w Renata Borovica-Gajic 2018– ). Self-driving databases.</li>
-<li><a href="https://www.linkedin.com/in/dongge-liu-9a957913a">Dongge Liu</a> (w Toby Murray 2018– ). Software fuzzing with machine learning.</li>
+<li><a href="https://www.linkedin.com/in/dongge-liu-9a957913a">Dongge Liu</a> (w Toby Murray, Gideon Ernst 2018– ). Software fuzzing with machine learning.</li>
 <li><a href="https://au.linkedin.com/in/leyla-roohi-b4544a67">Leyla Roohi</a> (w Vanessa Teague 2017– ). Secure storage and private querying for telecommunications metadata.</li>
-<li><a href="https://www.researchgate.net/profile/Lingjuan_Lyu">Lingjuan Lyu</a> (w Marimuthu Palaniswami 2016– ). Privacy in distributed sensing.</li>
 <li><a href="https://www.linkedin.com/in/neil-marchant-466678aa/">Neil Marchant</a> (w Aurore Delaigle 2016– ). Record linkage, adaptive importance sampling.</li>
 <li>Yuan Li (w Trevor Cohn 2015– ). Crowd sourcing, Bayesian optimisation, NLP.</li>
-<li><a href="https://xunyunliu.github.io/">Xunyun Liu</a> (w Raj Buyya, Rodrigo Calheiros 2015– ). Stream computing.</li>
-<li><a href="https://sites.google.com/site/safiheidari/">Safiollah Heidari</a> (w Raj Buyya 2015– ). Distributed graph processing.</li>
 </ul>
 </div>
 <div id="phd-studentscompleted" class="section level3">
 <h3>PhD students—Completed</h3>
 <ul>
-<li><a href="https://www.researchgate.net/profile/Zay_Aye">Zay Aye</a> - CompSci (w Rao Kotagiri 2014–18). Learning distance metrics → Tutor</li>
+<li><a href="https://www.researchgate.net/profile/Lingjuan_Lyu">Lingjuan Lyu</a> (w Marimuthu Palaniswami 2016– ). Privacy in distributed sensing → Postdoc at the ANU</li>
+<li><a href="https://sites.google.com/site/safiheidari/">Safiollah Heidari</a> (w Raj Buyya 2015– ). Distributed graph processing → Founder, NeuroPhyte</li>
+<li><a href="https://xunyunliu.github.io/">Xunyun Liu</a> (w Raj Buyya, Rodrigo Calheiros 2015–18). Stream computing → Assistant Prof at NUDT</li>
+<li><a href="https://www.researchgate.net/profile/Zay_Aye">Zay Aye</a> - CompSci (w Rao Kotagiri 2014–18). Learning distance metrics → Postdoc at Univ Melbourne</li>
 <li><a href="https://www.linkedin.com/in/yamuna-kankanige-8b258a26/">Yamuna Kankanige</a> (w James Bailey 2015–18). Predicting liver transplant outcomes with Austin Health → Bioinformatician at Peter MacCallum Cancer Centre</li>
 <li><a href="https://scholar.google.com.au/citations?user=1EPDwbAAAAAJ&amp;hl=en">Maryam Fanaeepour</a> - CompSci (w Lars Kulik, Egemen Tanin 2014–17). Location data privacy → Postdoc at Duke University</li>
 <li><a href="https://scholar.google.com.au/citations?user=GtpWKiwAAAAJ&amp;hl=en">Jiazhen He</a> - CompSci (w James Bailey, Rui Zhang 2014–17). Education analytics and MOOCs → Postdoc at Univ Melbourne</li>
 <li><a href="https://www.researchgate.net/profile/Zuhe_Zhang">Zuhe Zhang</a> - Maths &amp; Stats (w Sanming Zhou 2014–17). Differential privacy in Bayesian statistics → Data Scientist at ANZ Bank</li>
 </ul>
 </div>
-<div id="phd-internsformer-microsoft-research" class="section level3">
-<h3>PhD Interns—former Microsoft Research</h3>
+<div id="other-alumni" class="section level3">
+<h3>Other Alumni</h3>
 <ul>
-<li><a href="http://www.linkedin.com/pub/akshay-balsubramani/12/3aa/2">Akshay Balsubramani</a> - UC San Diego (2012) → Postdoc at Stanford</li>
-<li><a href="http://acsweb.ucsd.edu/~ecoviell/">Emanuele Coviello</a> - UC San Diego (2012) → Founder/CEO at Keevio</li>
-<li><a href="http://www.eecs.berkeley.edu/~sahand_n/">Sahand Negahban</a> - UC Berkeley (2011) → Assistant Prof at Yale Statistics</li>
-<li><a href="http://sifaka.cs.uiuc.edu/~dzhang22/">Duo Zhang</a> - UIUC (2011) → Software Engineer at Twitter</li>
-<li><a href="http://dm1.cs.uiuc.edu/">Bo Zhao</a> - UIUC (2011) → Researcher at Microsoft Research</li>
+<li><a href="https://scholar.google.com/citations?user=TpErHPkAAAAJ&amp;hl=en">Shen Wang</a> (postdoc 2016–18). Probabilistic programming, databases, record linkage.</li>
+<li><a href="http://ben.fish/">Ben Fish</a> (medium-term PhD visitor 2016) → Postdoc at MSR Montréal</li>
+<li><a href="http://www.ruhr-uni-bochum.de/lmi/alda/">Francesco Aldà</a> (medium-term PhD visitor 2016) → Data Scientist at SAP, Germany <!-- ### PhD interns---former Microsoft Research --></li>
+<li><a href="http://www.linkedin.com/pub/akshay-balsubramani/12/3aa/2">Akshay Balsubramani</a> (MSR PhD intern 2012) → Postdoc at Stanford</li>
+<li><a href="http://acsweb.ucsd.edu/~ecoviell/">Emanuele Coviello</a> (MSR PhD intern 2012) → Founder/CEO at Keevio</li>
+<li><a href="http://www.eecs.berkeley.edu/~sahand_n/">Sahand Negahban</a> (MSR PhD intern 2011) → Assistant Prof at Yale Statistics</li>
+<li><a href="http://sifaka.cs.uiuc.edu/~dzhang22/">Duo Zhang</a> (MSR PhD intern 2011) → Software Engineer at Twitter</li>
+<li><a href="http://dm1.cs.uiuc.edu/">Bo Zhao</a> (MSR PhD intern 2011) → Researcher at Microsoft Research</li>
 </ul>
 </div>
 
